# dali_fuzzing

./: CMakeLists.txt  README.md
fuzz_test/: bmp_test.cpp  image_decoder_test.cpp  jpg2k_test.cpp  jpg_test.cpp  png_test.cpp  tiff_test.cpp
